[gd_scene load_steps=11 format=3 uid="uid://bjica7mmofcmg"]

[ext_resource type="Texture2D" uid="uid://dnwwdsjl8a5wv" path="res://Assets/NPC1_Front.png" id="1_2pb1h"]
[ext_resource type="Script" uid="uid://bp4us5ijenp4e" path="res://Enemy/enemy_visual.gd" id="2_px1sc"]
[ext_resource type="PackedScene" uid="uid://dq5coxtle62he" path="res://CardsDisplayed/card.tscn" id="3_am0pq"]
[ext_resource type="Texture2D" uid="uid://c8e1sf7pivvvq" path="res://Assets/arrow.png" id="4_0fmjy"]

[sub_resource type="AtlasTexture" id="AtlasTexture_0fmjy"]
atlas = ExtResource("4_0fmjy")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tbmb4"]
atlas = ExtResource("4_0fmjy")
region = Rect2(64, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_xsmyp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0fmjy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tbmb4")
}],
"loop": true,
"name": &"default",
"speed": 4.0
}]

[sub_resource type="Animation" id="Animation_0fmjy"]
resource_name = "talk"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemyVisual:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0.02, 0), Vector3(0, 0, 0), Vector3(0, 0.02, 0), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_tbmb4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemyVisual:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xsmyp"]
_data = {
&"RESET": SubResource("Animation_tbmb4"),
&"talk": SubResource("Animation_0fmjy")
}

[node name="EnemyVisual" type="Node3D"]
script = ExtResource("2_px1sc")

[node name="CardHolder" type="Node3D" parent="."]

[node name="1" parent="CardHolder" instance=ExtResource("3_am0pq")]
transform = Transform3D(0.2954423, 0.052094452, 0, -0.04895277, 0.27762493, -0.10260603, -0.01781735, 0.10104721, 0.28190777, 0, -0.1, 0.159)

[node name="2" parent="CardHolder" instance=ExtResource("3_am0pq")]
transform = Transform3D(0.2954423, -0.052094456, 0, 0.04895277, 0.27762496, -0.10260604, 0.01781735, 0.101047225, 0.2819078, -0.075, -0.1, 0.175)

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]

[node name="TurnIndicator" type="AnimatedSprite3D" parent="."]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0.42376918, 0)
sprite_frames = SubResource("SpriteFrames_xsmyp")
autoplay = "default"
frame = 1
frame_progress = 0.7306589

[node name="TalkingAnimation" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_xsmyp")
}

[node name="EnemyVisual" type="Sprite3D" parent="."]
texture_filter = 0
texture = ExtResource("1_2pb1h")
